openstack-dashboard/dashboard/static/dashboard/css/style.css
/* ... */
.status_box.good li.block {
    color: #7ec67b;
}

.status_box.medium {
  background-color: #ffffe8;
  color: #eada83;
  border-color: #ffe37b;
}

.status_box.bad {
  background-color: #ffdbdc;
  color: #ff8080;
  border-color: #ff9a99;
}

.overview {
    font-size: 24px;
}

.status_box.medium .status span, .status_box.medium .overview { color: #d1b100; }
.status_box.bad .status span, .status_box.bad .overview {  color: #eb1400; }
.status_box.good .status { background: url(../images/status_sprite.png) 6px 8px no-repeat; }
.status_box.medium .status { background: url(../images/status_sprite.png) no-repeat 6px -90px; }
.status_box.bad .status { background: url(../images/status_sprite.png) no-repeat 6px -186px; }

.status_box.small {
  width: 100%;
  min-width: 360px;
  margin: 0 0 25px 0;
  float: left;
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  border-radius: 0;
}

.status_box.small p {
  text-align: center;
  margin: 0;
}

.status_box.small p.overview {
  color: #2a7380;
  margin: -10px 0 5px 0;
}

.status_box.small p.avail {
  width: 100%;
  margin: 0 ;
}

.status_box.small li.block {
  width: 26%;
}

.status_box .status span, .status_box .overview { color: #2e802b; }
.status_box p.avail { margin-right: 0; }

.status_box .overview span {
  text-transform: uppercase;
  font-size: 11px;
}

.status_box p.used {
  font-size: 18px;
  margin: 0 15px 0 0;
  float: left;
  text-align: center;
}

.status_box p.avail {
  font-size: 18px;
  margin: 0 0 0 0;
  float: left;
  text-align: center;
}

.status_box p.avail span, .status_box p.used span {
  font-size: 10px;
  margin-top: -5px;
  text-transform: uppercase;
}

.status_box li.block {
  min-width: 135px;
  width: 17%;
  height: 61px;
  float: left;
  padding: 15px 25px 15px 25px;
  border-right: 1px solid;
}

.status_box .good .block { border-color: #c3eec1; }
.status_box .medium .block { border-color: #fbf665; }
.status_box .bad .block { border-color: #faa; }

.status_box li.status {
  height: 44px;
  min-height: 29px;
  padding-top: 32px;
  padding-left: 37px;
  padding-right: 37px;
}

.status_box span.label {
  margin: 2px 0 0 0;
  display: block;
}

#activity {
  background: #fbfbfb;
  text-align: center;
  min-width: 735px;
  padding: 5px 0 5px 0;
  border: 1px solid #e6e6e6;
}

#activity.tenant { margin: 0 0 0 0; }
#activity span { margin: 0 0 0 10px; }

#activity strong {
  color: #afafaf;
  font-weight: normal;
  font-size: 11px;
}

#monitoring {
  background: #f8f8f8;
  font-size: 14px;
  height: 20px;
  margin: -18px 0 25px;
  padding: 10px;
  border: 1px solid #e1e1e1;
  font-family: "anivers";
}

#monitoring h3{
    font-size: 13px;
    font-weight: normal;
    float: left;
    margin-top: -8px;
}

#external_links, #external_links li {
    float: left;
}
#external_links li { margin: 0 0 0 15px; }

/* Forms */

.modal label {
    text-align: left;
    color: #555;
    font-weight: bold;
}

.input {
    width: 100%;
    float: left;
    margin: 0 !important;
}

.modal {
    width: 700px;
    max-height: none; /* Prevents large modals from scrolling unnecessarily */
    top: 80px;
    margin-top: 0;
    position: absolute;
}

.modal form.horizontal .form-field {
    float: left;
  }

.modal form.horizontal.split_half .form-field {
    width: 334px; /* Fits 2 fields to a row */
}

.modal form.horizontal.split_quarter .form-field {
    width: 167px; /* Fits 4 fields to a row */
}

.modal form.horizontal fieldset {
    width: 100%;
}

.modal table {
  margin-bottom: 30px;
}

.modal-body ~ hr {
  margin-bottom: 0;
}

.modal.static_page {
  position: relative;
  left: 280px;
  top: 10px;
  float: left;
}

.modal .left {
    float: left;
    width: 342px;
    margin-right: 25px;
}

.left form {
  margin: 0;
}

.modal .right {
    float: left;
    width: 285px;
}

.clear {
    clear: both;
    width: 0;
    height: 0;
    padding: 0;
    margin: 0;
}

.modal fieldset {
    margin: 0;
    padding: 0;
    width: 372px;
}

.modal .form-field,
.modal fieldset ul {
    width: 90%;
}

.modal fieldset .form-field input,
.modal fieldset .form-field select,
.modal fieldset .form-field textarea {
  width: 100%;
}

.modal .modal-footer input {
    width: auto;
}

.modal-body {
  padding-bottom: 0;
}

.modal .modal-body .modal-footer {
    width: 670px;
    margin-left: -25px;
    margin-right: -15px;
}

.modal-footer a.close {
  margin-top: 0;
    margin-right: 5px;
    font-size: 12px;
    color: #666;
    font-weight: normal;
  filter: alpha(opacity=100);
  -khtml-opacity: 1;
  -moz-opacity: 1;
  opacity: 1;
}

.modal-footer a.close:hover {
    color: #333;
    text-decoration: underline;
}

.modal .help-block {
    text-align: left;
    float: left;
    width: 100%;
    margin-bottom: 10px;
}

#create_keypair_modal .clearfix {
  margin-bottom: 115px;
}

#actions {
    width: 90px;
}
#actions .btn {
    margin-bottom: 5px;
}
#actions a.btn {
    width: 70px;
}

#actions input.btn {
    text-align: left;
}

#images #actions {
    width: 100px;
}

/*New List Patches*/
.details-modal .modal-body {
  padding-bottom: 20px;
}

.form-inline {
  display: inline;
}

td.select {
  width: 10px;
}

/* Actions dropdown */

td.actions_column {
  width: 150px;
  padding: 10px;
  position: relative;
  min-height: 20px;
}

/* Makes size consistent across browsers when mixing "btn-group" and "small" */
.btn-group > .btn.small {
  height: 12px;
}
.btn-group .dropdown-toggle {
  height: 12px;
  padding-top: 7px;
  padding-bottom: 7px;
}
.btn-group .dropdown-toggle:focus {
  outline: none;
}

td.actions_column ul.row_actions li:hover {
  background-color: #cdcdcd;
}

td.actions_column ul.row_actions a,
td.actions_column ul.row_actions input,
td.actions_column ul.row_actions button {
  background: none;
  float: none;
  display: block;
  padding: 5px 10px;
  color: black;
  text-align: left;
  border-radius: 0;
  border: 0 none;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}
/* ... */

